Fixed gap again for the third time

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ a {
     }
     #imagesSection2 {
         flex-wrap: wrap;
-        gap: 7em 3em;
+        gap: 9em 3em;
     }
 }
 
